--- a/main.html
+++ b/main.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="container">
+        <h2 id="verification_heading">Verify Your Account</h2>
+        <p id="verification_subtext">We emailed you the six-digit code to acciojob@email.com. Enter the code below to
+            confirm your email address.</p>
+        <div class="code-container">
+            <input type="text" maxlength="1" class="code" id="code-1">
+            <input type="text" maxlength="1" class="code" id="code-2">
+            <input type="text" maxlength="1" class="code" id="code-3">
+            <input type="text" maxlength="1" class="code" id="code-4">
+            <input type="text" maxlength="1" class="code" id="code-5">
+            <input type="text" maxlength="1" class="code" id="code-6">
+        </div>
+        <p class="info">This is design only. We didn't actually send you an email as we don't have your email, right?
+        </p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
